10/29@10:32am: Made everything CPP source
10/29@04:15pm: Added internal framework for storing new monsters/items + types ;; added example files in ~/.rlg327 (not mirrored)
10/30@02:03am: Added cpp-y file i/o with print out statement